--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
   <h1>Con todo lo aprendido</h1>
+  <main>
+    <header>
+      <div class="logo">
+        <img src="#" alt="logo">
+      </div>
+      <div class="enlaces">
+        <ul>
+          <li>Porque ver mi sitio</li>
+          <li>Sobre mi</li>
+          <li>Trabajos</li>
+          <li>Contacto</li>
+        </ul>
+      </div>
+    </header>
+  </main>
   <script src="js.js"></script>
 </body>
 </html>
